[package]
name = "process-explorer-2"
version = "0.1.0"
edition = "2021"

[dependencies]
memchr = { version = "2.5", optional = true }
ntapi = { version = "0.4", optional = true }
windows = { version = ">=0.54, <=0.57", optional = true, features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp"] }
winapi = "0.3.9"
tlhelp32 = "=1.0.3"

[features]
default = ["system"]
system = [
    "windows/Win32_Foundation",
    "windows/Wdk_System_SystemInformation",
    "windows/Wdk_System_SystemServices",
    "windows/Wdk_System_Threading",
    "windows/Win32_Security_Authorization",
    "windows/Win32_System_Diagnostics_Debug",
    "windows/Win32_System_Kernel",
    "windows/Win32_System_Memory",
    "windows/Win32_System_Performance",
    "windows/Win32_System_Power",
    "windows/Win32_System_ProcessStatus",
    "windows/Win32_System_Registry",
    "windows/Win32_System_RemoteDesktop",
    "windows/Win32_System_SystemInformation",
    "windows/Win32_System_SystemServices",
    "windows/Win32_System_Threading",
    "windows/Win32_UI_Shell",
    "dep:ntapi",
    "dep:memchr",
]
